# DBus-Config-Manager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
com.system.configurationManager/: confManagerApplication1.json
confManagerApplication1/: CMakeLists.txt  application.cpp  application.h  main.cpp
confManagerApplication1/include/: application.h
confManagerApplication1/src/: application.cpp  main.cpp
service/: CMakeLists.txt  main.cpp  service.cpp  service.h
service/include/: applicationConfigObject.h  service.h
service/src/: applicationConfigObject.cpp  main.cpp  service.cpp
